init kubernetes job
